cambiar contraseña vinculo

--- a/src/app/hub/sign-in/sign-in.component.html
+++ b/src/app/hub/sign-in/sign-in.component.html
@@ -29,9 +29,9 @@
           >¿No tienes cuenta?
           <a href="#" routerLink="/hub/registro">Registro</a></small
         >
-        <small
-          >¿Olvidaste tu contraseñ?
-          <a href="#" routerLink="/hub/olvide-contrasena">Obtenla</a></small
+        <small>
+          ¿Olvidaste tu contraseña?
+          <a href="#" routerLink="/hub/olvide-contrasena"> Obtenla </a></small
         >
       </div>
       <br />
