--- a/src/app/hub/sign-up-mobile/sign-up-mobile.component.html
+++ b/src/app/hub/sign-up-mobile/sign-up-mobile.component.html
@@ -2,7 +2,7 @@
   <mat-spinner></mat-spinner>
 </div>
 
-<div class="set-12" *ngIf="isDataAvailable">
+<!-- <div class="set-12" *ngIf="isDataAvailable">
   <h1>¡Hola!</h1>
   <h3>Necesitas una cuenta para ingresar.</h3>
   <input #fileInput type="file" (change)="openCropperDialog($event)" accept="image/*" hidden />
@@ -94,9 +94,9 @@
       <mat-spinner diameter="30" *ngIf="submitted"></mat-spinner>
     </div>
   </form>
-</div>
+</div> -->
 
-<!-- <div class="set-12" *ngIf="isDataAvailable">
+<div class="set-12" *ngIf="isDataAvailable">
   <mat-stepper #stepper [disableRipple]="true" [linear]="true" [@.disabled]="true">
     <mat-step>
       <form class="set-12" [formGroup]="stepOneFormGroup">
@@ -131,13 +131,27 @@
     <mat-step>
       <div class="set-12">
         <p>
-          <small>Organiza las categorías por interés</small>
+          <small *ngIf="!viewSubLayouts">Organiza las categorías por interés</small>
+          <small *ngIf="viewSubLayouts">Organiza las sub categorías por interés</small>
         </p>
       </div>
 
-      <div cdkDropList class="set-12 drag-list" (cdkDropListDropped)="drop($event)">
+      <div cdkDropList class="set-12 drag-list" (cdkDropListDropped)="dragAndDropLayout($event)"
+        *ngIf="!viewSubLayouts">
         <div class="set-12 drag-box" *ngFor="let layout of layouts" cdkDrag (click)="onLayoutSelected(layout)">
           <strong>{{layout.category.name}}</strong>
+        </div>
+      </div>
+
+      <div cdkDropList class="set-12 drag-sublist" (cdkDropListDropped)="dragAndDropSubLayout($event)"
+        *ngIf="viewSubLayouts">
+        <div class="set-12 drag-box" *ngFor="let layout of sublayouts" cdkDrag>
+          <strong>{{layout.category.name}}</strong>
+        </div>
+        <div class="set-12 innerctrls">
+          <button type="button" mat-mini-fab color="primary" (click)="hideSubLayouts()">
+            <mat-icon>arrow_back</mat-icon>
+          </button>
         </div>
       </div>
 
@@ -165,6 +179,14 @@
           <mat-icon matSuffix>search</mat-icon>
         </mat-form-field>
       </form>
+
+      <div class="set-12">
+        <div cdkDropList class="set-12 drag-chiplist">
+          <div class="drag-chip" *ngFor="let word of bagOfWords" cdkDrag>
+            <strong>{{word}}</strong>
+          </div>
+        </div>
+      </div>
 
       <div class="set-12 ctrls">
         <button mat-raised-button color="warn" matStepperPrevious>
@@ -199,4 +221,4 @@
       </div>
     </mat-step>
   </mat-stepper>
-</div> -->
+</div>
