--- a/src/app/hub/sign-up-mobile/sign-up-mobile.component.scss
+++ b/src/app/hub/sign-up-mobile/sign-up-mobile.component.scss
@@ -57,52 +57,132 @@
   .drag-list {
     width: 100%;
     max-width: 100%;
-    // border: dashed 1px #00031D;
     min-height: 60px;
     display: block;
     border-radius: 4px;
     overflow: hidden;
     margin: 20px 0 10px 0;
+
+    .drag-box {
+      padding: 20px 10px;
+      color: rgba(0, 0, 0, 0.87);
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      box-sizing: border-box;
+      cursor: move;
+      font-size: 14px;
+      background: linear-gradient(180deg, #71F5AD 100%, #0EAA70 100%);
+      border: 1px dashed #00031D;
+      text-transform: uppercase;
+      margin-bottom: 5px;
+      border-radius: 5px;
+    }
+
+    .cdk-drag-preview {
+      box-sizing: border-box;
+      border-radius: 4px;
+      box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+        0 8px 10px 1px rgba(0, 0, 0, 0.14),
+        0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    }
+
+    .cdk-drag-placeholder {
+      opacity: 0;
+    }
+
+    .cdk-drag-animating {
+      transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+    }
   }
 
-  .drag-box {
-    padding: 20px 10px;
-    color: rgba(0, 0, 0, 0.87);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    box-sizing: border-box;
-    cursor: move;
-    font-size: 14px;
-    background: linear-gradient(180deg, #71F5AD 100%, #0EAA70 100%);
-    border: 1px dashed #00031D;
-    text-transform: uppercase;
-    margin-bottom: 5px;
-    border-radius: 5px;
-  }
-
-  .cdk-drag-preview {
-    box-sizing: border-box;
+  .drag-sublist {
+    width: 100%;
+    max-width: 100%;
+    min-height: 60px;
+    display: block;
     border-radius: 4px;
-    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-      0 8px 10px 1px rgba(0, 0, 0, 0.14),
-      0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    overflow: hidden;
+    margin: 20px 0 10px 0;
+
+    .drag-box {
+      padding: 10px;
+      color: rgba(0, 0, 0, 0.87);
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      box-sizing: border-box;
+      cursor: move;
+      font-size: 14px;
+      background: linear-gradient(180deg, #E1F2EC 100%, #E1F2EC 100%);
+      border: 1px dashed #00031D;
+      text-transform: uppercase;
+      margin-bottom: 5px;
+      border-radius: 5px;
+    }
+
+    .cdk-drag-preview {
+      box-sizing: border-box;
+      border-radius: 4px;
+      box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+        0 8px 10px 1px rgba(0, 0, 0, 0.14),
+        0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    }
+
+    .cdk-drag-placeholder {
+      opacity: 0;
+    }
+
+    .cdk-drag-animating {
+      transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+    }
   }
 
-  .cdk-drag-placeholder {
-    opacity: 0;
+  .drag-chiplist {
+    width: 100%;
+    max-width: 100%;
+    min-height: 60px;
+    display: block;
+    border-radius: 4px;
+    overflow: hidden;
+    margin: 20px 0 10px 0;
+
+    .drag-chip {
+      cursor: move;
+      font-size: 9pt;
+      background: gainsboro;
+      border: 1px dashed #00031D;
+      display: inline-block;
+      margin-right: 10px;
+      margin-bottom: 10px;
+      border-radius: 30px;
+      padding: 5px 10px;
+    }
+
+    .cdk-drag-preview {
+      box-sizing: border-box;
+      border-radius: 4px;
+      box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+        0 8px 10px 1px rgba(0, 0, 0, 0.14),
+        0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    }
+
+    .cdk-drag-placeholder {
+      opacity: 0;
+    }
+
+    .cdk-drag-animating {
+      transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+    }
   }
 
-  .cdk-drag-animating {
+  .drag-list.cdk-drop-list-dragging .drag-box:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
 
-  // .drag-box:last-child {
-  //   border: none;
-  // }
-
-  .drag-list.cdk-drop-list-dragging .drag-box:not(.cdk-drag-placeholder) {
+  .drag-sublist.cdk-drop-list-dragging .drag-box:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
 
@@ -126,6 +206,17 @@
 
     mat-spinner {
       margin-left: 20px;
+    }
+  }
+
+  .innerctrls {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin: 10px 0;
+
+    * {
+      margin: 0;
     }
   }
 
