--- a/src/app/public-documents/subcategory/subcategory.component.html
+++ b/src/app/public-documents/subcategory/subcategory.component.html
@@ -133,7 +133,8 @@
               <ng-container matColumnDef="score">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Calificación</th>
                 <td mat-cell *matCellDef="let element">
-                  {{ element.stats.score }}
+                  <span *ngIf="element.stats != null">{{ element.stats.score }}</span>
+                  <span *ngIf="element.stats == null">0</span>
                 </td>
               </ng-container>
 
@@ -173,7 +174,8 @@
               <ng-container matColumnDef="score">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Calificación</th>
                 <td mat-cell *matCellDef="let element">
-                  {{ element.stats.score }}
+                  <span *ngIf="element.stats != null">{{ element.stats.score }}</span>
+                  <span *ngIf="element.stats == null">0</span>
                 </td>
               </ng-container>
 
@@ -194,12 +196,12 @@
                   <strong>
                     <small>No se encontraron problemas.</small>
                   </strong>
-                  <!-- <br />
-                  <small>Sé el primero en agregar un problema.</small> -->
+                  <br />
+                  <small>Sé el primero en agregar un problema.</small>
                 </p>
-                <!-- <button type="button" mat-raised-button color="warn">
+                <button type="button" mat-raised-button color="warn" (click)="popAddDocumentTheme()">
                   <small>Agregar problema</small>
-                </button> -->
+                </button>
               </div>
             </ng-template>
           </div>
