--- a/src/app/components/app-pagelet/app-pagelet.component.html
+++ b/src/app/components/app-pagelet/app-pagelet.component.html
@@ -20,8 +20,8 @@
 
     <!-- <button type="button">
       Pensamiento colectivo
-    </button>
-    <span class="sep">|</span> -->
+    </button> -->
+    <span class="sep">|</span>
 
     <!-- user not available -->
     <button type="button" (click)="linkMe('join')" *ngIf="user == null" matTooltip="Registro" matTooltipClass="tooltip">
