--- a/src/app/components/edit-document-data/edit-document-data.component.html
+++ b/src/app/components/edit-document-data/edit-document-data.component.html
@@ -4,8 +4,7 @@
 
 <div class="set-12" *ngIf="isDataAvailable">
   <div class="set-12 dialog-head">
-    <!-- <h3>{{document.title}}</h3> -->
-    <!-- <div class="set-9">
+    <div class="set-9">
       <h3>{{document.title}}</h3>
     </div>
 
@@ -14,7 +13,7 @@
         matTooltip="Cerrar" matTooltipClass="tooltip">
         <mat-icon>cancel</mat-icon>
       </button>
-    </div> -->
+    </div>
   </div>
 
   <div class="set-12 dialog-body">
@@ -24,10 +23,13 @@
         <input type="text" matInput formControlName="title">
       </mat-form-field>
 
-      <mat-form-field appearance="outline">
+      <!-- <mat-form-field appearance="outline">
         <mat-label>Descripción</mat-label>
         <textarea matInput cdkTextareaAutosize formControlName="description"></textarea>
-      </mat-form-field>
+      </mat-form-field> -->
+      <div class="set-12">
+        <angular-editor formControlName="description" [config]="editorConfig"></angular-editor>
+      </div>
 
       <div class="set-12 ctrls">
         <button type="button" mat-raised-button color="accent" [disabled]="submitted" (click)="killDialog()">
