--- a/src/app/documents/single-document/single-document.component.html
+++ b/src/app/documents/single-document/single-document.component.html
@@ -66,10 +66,8 @@
               </mat-menu>
             </div>
           </div>
-          <p class="card-description" *ngIf="document.description != null">
-            {{ (document.description.length > 200) ? (document.description | slice: 0 : 200) + '..' :
-            (document.description) }}
-          </p>
+          <p class="card-description" *ngIf="document.description != null" [innerHtml]="(document.description.length > 200) ? (document.description | slice: 0 : 200) + '..' :
+            (document.description)"></p>
           <button type="button" class="card-description link" (click)="popDescriptionViewerDialog()">Leer más</button>
           <avatars-row [users]="collaborators" *ngIf="actionControlActivityList.includes(user.activityName)">
           </avatars-row>
