--- a/src/app/components/add-document-solution/add-document-solution.component.html
+++ b/src/app/components/add-document-solution/add-document-solution.component.html
@@ -1,45 +1,62 @@
-<div class="set-12 dialog-head">
-  <h3>Agregar Solución</h3>
+<div class="set-12 loading" *ngIf="!isDataAvailable">
+  <mat-spinner diameter="50"></mat-spinner>
 </div>
 
-<div class="set-12 step-content">
-  <form [formGroup]="addSolutionFormGroup" (submit)="onCreateSolution(addSolutionFormGroup)">
-    <input type="file" #file (change)="onFileSelected($event)" multiple>
-    <div class="set-12">
-      <mat-form-field appearance="outline">
-        <mat-label>Título</mat-label>
-        <input type="text" matInput formControlName="title">
-      </mat-form-field>
+<div class="set-12" *ngIf="isDataAvailable">
+  <div class="set-12 dialog-head">
+    <div class="set-9">
+      <h3>Agregar Solución</h3>
     </div>
+    <div class="set-3 txt-right">
+      <button type="button" mat-icon-button color="primary" (click)="killDialog()" [disabled]="submitted">
+        <mat-icon>cancel</mat-icon>
+      </button>
+    </div>
+  </div>
 
-    <div class="set-12 inpts">
-      <div class="set-9">
+  <div class="set-12 step-content">
+    <form [formGroup]="addSolutionFormGroup" (submit)="onCreateSolution(addSolutionFormGroup)">
+      <input type="file" #file (change)="onFileSelected($event)" multiple>
+      <div class="set-12">
         <mat-form-field appearance="outline">
-          <mat-label>Descripción</mat-label>
-          <textarea matInput cdkTextareaAutosize formControlName="description"></textarea>
+          <mat-label>Título</mat-label>
+          <input type="text" matInput formControlName="title">
         </mat-form-field>
       </div>
 
-      <div class="set-3">
-        <button type="button" class="upload-img" (click)="file.click()">
-          <mat-icon>add_a_photo</mat-icon>
-        </button>
+      <div class="set-12 editor-form">
+        <angular-editor formControlName="description" [config]="editorConfig"></angular-editor>
       </div>
-    </div>
 
-    <div class="set-12 txt-right ctrls">
-      <button type="button" mat-raised-button color="accent" [disabled]="submitted" (click)="killDialog()">
-        <small>Cancelar</small>
-      </button>
-      <button type="submit" mat-raised-button color="primary" [disabled]="addSolutionFormGroup.invalid || submitted">
-        <small>Guardar</small>
-      </button>
-      <mat-spinner diameter="20" *ngIf="submitted"></mat-spinner>
+      <!-- <div class="set-12 inpts">
+        <div class="set-9">
+          <mat-form-field appearance="outline">
+            <mat-label>Descripción</mat-label>
+            <textarea matInput cdkTextareaAutosize formControlName="description"></textarea>
+          </mat-form-field>
+        </div>
+  
+        <div class="set-3">
+          <button type="button" class="upload-img" (click)="file.click()">
+            <mat-icon>add_a_photo</mat-icon>
+          </button>
+        </div>
+      </div> -->
+
+      <div class="set-12 txt-right ctrls">
+        <button type="button" mat-raised-button color="accent" [disabled]="submitted" (click)="killDialog()">
+          <small>Cancelar</small>
+        </button>
+        <button type="submit" mat-raised-button color="primary" [disabled]="addSolutionFormGroup.invalid || submitted">
+          <small>Guardar</small>
+        </button>
+        <mat-spinner diameter="20" *ngIf="submitted"></mat-spinner>
+      </div>
+    </form>
+    <div class="set-12 file-hldr" *ngIf="fileNames.length != 0">
+      <p *ngFor="let name of fileNames">
+        <small>{{name}}</small>
+      </p>
     </div>
-  </form>
-  <div class="set-12 file-hldr" *ngIf="fileNames.length != 0">
-    <p *ngFor="let name of fileNames">
-      <small>{{name}}</small>
-    </p>
   </div>
 </div>
