--- a/src/app/components/add-document-solution/add-document-solution.component.scss
+++ b/src/app/components/add-document-solution/add-document-solution.component.scss
@@ -1,79 +1,45 @@
 :host {
-  .form-body {
-    margin-top: 20pt;
+  padding: 20px;
+  float: left;
+  width: 70%;
+  margin: 0 15%;
 
+  ::ng-deep .angular-editor-toolbar {
+    background: transparent !important;
+    border: 0 !important;
+    border-bottom: 1px solid rgba($color: #000000, $alpha: 0.1) !important;
+    padding: 10px !important;
+  }
 
-    >* {
+  // ::ng-deep .angular-editor-textarea {
+  //   resize: none !important;
+  // }
+
+  ::ng-deep .angular-editor .angular-editor-wrapper .angular-editor-textarea {
+    background: transparent !important;
+    margin: 0 !important;
+    border: 0 !important;
+    outline: none !important;
+    padding: 10px !important;
+  }
+
+  ::ng-deep .angular-editor .angular-editor-wrapper .angular-editor-placeholder {
+    padding: 10px !important;
+  }
+
+  .editor-form {
+    margin-bottom: 20px;
+    background: #ffffff;
+    border-radius: 5px;
+  }
+
+  .dialog-head {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+
+    * {
       margin: 0;
-    }
-
-    textarea {
-      height: 100pt;
-    }
-
-    .imagebox {
-      border-color: #636363;
-      border-style: dashed;
-      border-width: 1px;
-      width: 30%;
-      min-height: 100pt;
-      height: auto;
-      margin-bottom: 50pt;
-      position: relative;
-      margin-left: 10pt;
-      border-radius: 5px;
-
-      label {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        font-size: 12pt;
-        user-select: none;
-        z-index: 3;
-        cursor: pointer;
-        position: absolute;
-        top: 0;
-        left: 0;
-        transition: all 390ms linear;
-        box-sizing: border-box;
-
-        &.data {
-          background-color: rgba(250, 250, 250, 0.7);
-          opacity: 0;
-
-          &:hover {
-            opacity: 1;
-          }
-        }
-
-        mat-icon {
-          font-size: 25pt;
-          color: #306eff;
-        }
-
-        span {
-          margin-top: 8pt;
-        }
-      }
-
-      .preview {
-        width: 100%;
-        // height: 100%;A
-        object-fit: cover;
-        transition: opacity 450ms linear;
-        z-index: 2;
-
-        &.empty {
-          opacity: 0;
-        }
-
-        &.data {
-          opacity: 1;
-        }
-      }
     }
   }
 
@@ -172,5 +138,14 @@
   .file-hldr {
     font-weight: bold;
     font-style: italic;
+  }
+
+  .loading {
+    mat-spinner {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
 }
