--- a/src/app/components/add-document-theme/add-document-theme.component.html
+++ b/src/app/components/add-document-theme/add-document-theme.component.html
@@ -4,15 +4,14 @@
 
 <div class="set-12" *ngIf="isDataAvailable">
   <div class="set-12 dialog-head">
-    <h3>Agregar Problema</h3>
-    <!-- <div class="set-9">
+    <div class="set-9">
       <h3>Agregar Problema</h3>
     </div>
     <div class="set-3 txt-right">
       <button type="button" mat-icon-button color="primary" (click)="killDialog()" [disabled]="submitted">
         <mat-icon>cancel</mat-icon>
       </button>
-    </div> -->
+    </div>
   </div>
 
 
@@ -33,7 +32,10 @@
           </div>
 
           <div class="set-12 inpts" *ngIf="!canAddSolution">
-            <div class="set-9">
+            <div class="set-12 editor-form">
+              <angular-editor formControlName="description" [config]="editorConfig"></angular-editor>
+            </div>
+            <!-- <div class="set-9">
               <mat-form-field appearance="outline">
                 <mat-label>Descripción</mat-label>
                 <textarea matInput cdkTextareaAutosize formControlName="description"></textarea>
@@ -44,6 +46,16 @@
               <button type="button" class="upload-img" (click)="file.click()">
                 <mat-icon>add_a_photo</mat-icon>
               </button>
+            </div> -->
+          </div>
+
+          <div class="set-12 topic" *ngIf="canAddSolution">
+            <h3>{{topic.title}}</h3>
+            <p [innerHTML]="topic.description"></p>
+            <div class="set-12 ctrls txt-right">
+              <button type="button" mat-raised-button color="primary" matStepperNext>
+                <small>Agregar solución</small>
+              </button>
             </div>
           </div>
 
@@ -53,16 +65,6 @@
                 <i>Cobertura: <strong>{{dialogData.coverage.name}}</strong></i>
               </small>
             </p>
-          </div>
-
-          <div class="set-12 topic" *ngIf="canAddSolution">
-            <h3>{{topic.title}}</h3>
-            <p>{{topic.description}}</p>
-            <div class="set-12 ctrls txt-right">
-              <button type="button" mat-raised-button color="primary" matStepperNext>
-                <small>Agregar solución</small>
-              </button>
-            </div>
           </div>
 
           <div class="set-12 txt-right ctrls">
@@ -99,7 +101,11 @@
             </mat-form-field>
           </div>
 
-          <div class="set-12 inpts">
+          <div class="set-12 editor-form">
+            <angular-editor formControlName="description" [config]="editorConfig"></angular-editor>
+          </div>
+
+          <!-- <div class="set-12 inpts">
             <div class="set-9">
               <mat-form-field appearance="outline">
                 <mat-label>Descripción</mat-label>
@@ -112,7 +118,7 @@
                 <mat-icon>add_a_photo</mat-icon>
               </button>
             </div>
-          </div>
+          </div> -->
 
           <div class="set-12 txt-right ctrls">
             <button type="button" mat-raised-button color="accent" [disabled]="submitted" (click)="killDialog()">
