--- a/src/app/components/edit-document-data/edit-document-data.component.scss
+++ b/src/app/components/edit-document-data/edit-document-data.component.scss
@@ -1,5 +1,8 @@
 :host {
-  min-height: 240px;
+  padding: 20px;
+  float: left;
+  width: 70%;
+  margin: 0 15%;
 
   .dialog-head {
     display: flex;
