--- a/src/app/documents/single-subcategory/single-subcategory.component.html
+++ b/src/app/documents/single-subcategory/single-subcategory.component.html
@@ -57,7 +57,7 @@
               </mat-menu>
             </div>
           </div>
-          <p class="card-description" *ngIf="subcategory.description != null">{{subcategory.description}}</p>
+          <p class="card-description" *ngIf="subcategory.description != null" [innerHtml]="subcategory.description"></p>
           <!-- <button type="button" class="toolbtn" *ngIf="subcategory.description == null">
             <small>Agregar descripción</small>
           </button> -->
