text editor dev

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
       <button type="button" (click)="utilityService.linkMe('/'); open = !open">Inicio</button>
     </div>
     <div class="set-12">
-      <button type="button" (click)="utilityService.linkMe('/hub/ingresar'); open = !open">Ingresar</button>
+      <button type="button" (click)="utilityService.linkMe('/hub/signin-mobile'); open = !open">Ingresar</button>
     </div>
     <div class="set-12">
       <button type="button" (click)="utilityService.linkMe('/hub/signup-mobile'); open = !open">Registro</button>
