--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -136,7 +136,7 @@
     </div>
     <div class="set-10">
       <strong>
-        <span>Participa en nuestra plataforma, entra al Pensamiento Colectivo</span>
+        <span>¡Participa! Entra al Pensamiento Colectivo</span>
       </strong>
       <button type="button" mat-raised-button color="accent"
         (click)="linkMe('/documentos-publicos/' + document._id)">Aquí</button>
