--- a/src/app/components/description-viewer/description-viewer.component.html
+++ b/src/app/components/description-viewer/description-viewer.component.html
@@ -1,11 +1,22 @@
-<div class="container">
+<mat-card>
   <div class="header">
-    <h2 class="title">{{ title.toUpperCase() }}</h2>
+    <div class="set-10">
+      <h3 class="txt-left">{{title.toUpperCase()}}</h3>
+    </div>
+    <div class="set-2 txt-right">
+      <button type="button" mat-icon-button color="primary" matTooltip="Salir" matTooltipClass="tooltip"
+        (click)="killDialog()">
+        <mat-icon>cancel</mat-icon>
+      </button>
+    </div>
+  
+    <!-- <h2 class="title">{{ title.toUpperCase() }}</h2>
     <button class="button" type="button" mat-icon-button (click)="killDialog()">
       <mat-icon>cancel</mat-icon>
-    </button>
+    </button> -->
   </div>
+  
   <div class="body">
-    <p class="text">{{ text }}</p>
+    <div class="set-12" [innerHTML]="text"></div>
   </div>
-</div>
+</mat-card>
