--- a/src/app/components/edit-category-data/edit-category-data.component.html
+++ b/src/app/components/edit-category-data/edit-category-data.component.html
@@ -4,17 +4,15 @@
 
 <div class="set-12" *ngIf="isDataAvailable">
   <div class="set-12 dialog-head">
-    <h3>{{layout.name}}</h3>
-    <!-- <div class="set-9">
-      <h3>Categoría: {{layout.category.name}}</h3>
+    <div class="set-10">
+      <h3 class="txt-left">{{category.name}}</h3>
     </div>
-
-    <div class="set-3 txt-right">
-      <button type="button" mat-icon-button color="primary" (click)="killDialog()" [disabled]="submitted"
-        matTooltip="Cerrar" matTooltipClass="tooltip">
+    <div class="set-2 txt-right">
+      <button type="button" mat-icon-button color="primary" matTooltip="Salir" matTooltipClass="tooltip"
+        (click)="killDialog()" [disabled]="submitted">
         <mat-icon>cancel</mat-icon>
       </button>
-    </div> -->
+    </div>
   </div>
 
   <div class="set-12 dialog-body">
@@ -27,15 +25,18 @@
         </mat-form-field>
       </div>
 
-      <mat-form-field appearance="outline">
+      <!-- <mat-form-field appearance="outline">
         <mat-label>Descripción</mat-label>
         <textarea matInput cdkTextareaAutosize formControlName="description"></textarea>
-      </mat-form-field>
+      </mat-form-field> -->
+      <div class="set-12 editor-form">
+        <angular-editor formControlName="description" [config]="editorConfig"></angular-editor>
+      </div>
 
       <div class="set-12 ctrls">
-        <button type="button" mat-raised-button color="accent" [disabled]="submitted" (click)="killDialog()">
+        <!-- <button type="button" mat-raised-button color="accent" [disabled]="submitted" (click)="killDialog()">
           <small>Cancelar</small>
-        </button>
+        </button> -->
         <button type="submit" mat-raised-button color="primary" [disabled]="formGroup.invalid || submitted">
           <small>Guardar</small>
         </button>
