--- a/src/app/components/edit-document-data/edit-document-data.component.html
+++ b/src/app/components/edit-document-data/edit-document-data.component.html
@@ -27,14 +27,14 @@
         <mat-label>Descripción</mat-label>
         <textarea matInput cdkTextareaAutosize formControlName="description"></textarea>
       </mat-form-field> -->
-      <div class="set-12">
+      <div class="set-12 editor-form">
         <angular-editor formControlName="description" [config]="editorConfig"></angular-editor>
       </div>
 
       <div class="set-12 ctrls">
-        <button type="button" mat-raised-button color="accent" [disabled]="submitted" (click)="killDialog()">
+        <!-- <button type="button" mat-raised-button color="accent" [disabled]="submitted" (click)="killDialog()">
           <small>Cancelar</small>
-        </button>
+        </button> -->
         <button type="submit" mat-raised-button color="primary" [disabled]="formGroup.invalid || submitted">
           <small>Guardar</small>
         </button>
