--- a/src/app/components/edit-document-data/edit-document-data.component.scss
+++ b/src/app/components/edit-document-data/edit-document-data.component.scss
@@ -4,6 +4,35 @@
   width: 70%;
   margin: 0 15%;
 
+  ::ng-deep .angular-editor-toolbar {
+    background: transparent !important;
+    border: 0 !important;
+    border-bottom: 1px solid rgba($color: #000000, $alpha: 0.1) !important;
+    padding: 10px !important;
+  }
+
+  // ::ng-deep .angular-editor-textarea {
+  //   resize: none !important;
+  // }
+
+  ::ng-deep .angular-editor .angular-editor-wrapper .angular-editor-textarea {
+    background: transparent !important;
+    margin: 0 !important;
+    border: 0 !important;
+    outline: none !important;
+    padding: 10px !important;
+  }
+
+  ::ng-deep .angular-editor .angular-editor-wrapper .angular-editor-placeholder {
+    padding: 10px !important;
+  }
+
+  .editor-form {
+    margin-bottom: 20px;
+    background: #ffffff;
+    border-radius: 5px;
+  }
+
   .dialog-head {
     display: flex;
     align-items: center;
