--- a/src/app/hub/sign-in-mobile/sign-in-mobile.component.scss
+++ b/src/app/hub/sign-in-mobile/sign-in-mobile.component.scss
@@ -11,19 +11,23 @@
   form {
     padding: 20px;
 
-    input {
-      width: 100%;
-      background: #ffffff;
-      padding: 20px;
-      border: 1px solid rgba($color: #000000, $alpha: 0.1);
-      border-radius: 5px;
-      margin-bottom: 10px;
+    h4 {
+      margin-bottom: 20px;
     }
+
+    // input {
+    //   width: 100%;
+    //   background: #ffffff;
+    //   padding: 20px;
+    //   border: 1px solid rgba($color: #000000, $alpha: 0.1);
+    //   border-radius: 5px;
+    //   margin-bottom: 10px;
+    // }
 
     .ctrls {
       display: flex;
       align-items: center;
-      margin-top: 10px;
+      justify-content: flex-end;
     }
 
     .recover {
