--- a/src/app/public-documents/components/modal-desciption/modal-desciption.component.html
+++ b/src/app/public-documents/components/modal-desciption/modal-desciption.component.html
@@ -1,11 +1,20 @@
-<div class="container">
-  <div class="header">
-    <h2 class="title">{{ title.toUpperCase() }}</h2>
-    <button class="button" type="button" mat-icon-button (click)="killDialog()">
+<div class="set-12 header">
+  <div class="set-10">
+    <h3 class="txt-left">{{title.toUpperCase()}}</h3>
+  </div>
+  <div class="set-2 txt-right">
+    <button type="button" mat-icon-button color="primary" matTooltip="Salir" matTooltipClass="tooltip"
+      (click)="killDialog()">
       <mat-icon>cancel</mat-icon>
     </button>
   </div>
-  <div class="body">
-    <p class="text">{{ text }}</p>
-  </div>
+
+  <!-- <h2 class="title">{{ title.toUpperCase() }}</h2>
+  <button class="button" type="button" mat-icon-button (click)="killDialog()">
+    <mat-icon>cancel</mat-icon>
+  </button> -->
+</div>
+
+<div class="body">
+  <div class="text" [innerHTML]="text"></div>
 </div>
