--- a/src/app/public-documents/components/modal-desciption/modal-desciption.component.scss
+++ b/src/app/public-documents/components/modal-desciption/modal-desciption.component.scss
@@ -1,4 +1,9 @@
 :host {
+  padding: 20px;
+  float: left;
+  width: 70%;
+  margin: 0 15%;
+
   .container {
     width: 600px;
     height: 450px;
@@ -7,11 +12,13 @@
   }
 
   .header {
-    position: sticky;
-    top: 0;
-    width: 100%;
-    background-color: white;
     display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+
+    * {
+      margin: 0;
+    }
 
     .title {
       word-break: break-all;
@@ -30,14 +37,10 @@
 
   .body {
     width: 100%;
-    height: 330px;
+    height: auto;
     line-height: 25px;
     overflow-y: auto;
     overflow-x: hidden;
     overflow-wrap: break-word;
-
-    .text {
-      padding: 60px;
-    }
   }
 }
