--- a/src/app/public-documents/solution/solution.component.html
+++ b/src/app/public-documents/solution/solution.component.html
@@ -134,7 +134,7 @@
         </div>
 
         <div class="set-12 mt-2">
-          <div class="set-12 mt-2">
+          <!-- <div class="set-12 mt-2">
             <div class="set-6 col-rgt-2" style="padding:40px">
               <spider-chart [withBorder]="false"></spider-chart>
             </div>
@@ -144,7 +144,7 @@
             </div>
 
             <div class="set-6"></div>
-          </div>
+          </div> -->
         </div>
       </mat-card>
     </div>
