--- a/src/app/hub/sign-up-mobile/sign-up-mobile.component.html
+++ b/src/app/hub/sign-up-mobile/sign-up-mobile.component.html
@@ -99,20 +99,20 @@
 <div class="set-12" *ngIf="isDataAvailable">
   <mat-stepper #stepper [disableRipple]="true" [linear]="true" [@.disabled]="true">
     <mat-step>
-      <div class="set-12 txt-center">
+      <div class="set-12">
         <h1>¡Hola!</h1>
         <h3>Necesitas una cuenta para ingresar</h3>
         <input #fileInput type="file" (change)="openCropperDialog($event)" accept="image/*" hidden />
       </div>
 
-      <div class="set-12 avatarhldr">
+      <!-- <div class="set-12 avatarhldr">
         <button type="button" class="avatar" (click)="fileInput.click()">
           <mat-icon>add_a_photo</mat-icon>
         </button>
-      </div>
+      </div> -->
 
       <form class="set-12" [formGroup]="stepOneFormGroup">
-        <div class="set-12">
+        <!-- <div class="set-12">
           <mat-form-field appearance="outline">
             <mat-label>Tipo</mat-label>
             <mat-select formControlName="associationTypology" (selectionChange)="onTypeSelected($event)">
@@ -121,7 +121,7 @@
               </mat-option>
             </mat-select>
           </mat-form-field>
-        </div>
+        </div> -->
 
         <div class="set-12">
           <mat-form-field appearance="outline">
@@ -157,15 +157,15 @@
           </mat-form-field>
         </div>
 
-        <div class="set-12">
+        <!-- <div class="set-12">
           <mat-form-field appearance="outline">
             <mat-label>Nombre de tu organización</mat-label>
             <input type="text" matInput formControlName="associationName">
           </mat-form-field>
-        </div>
+        </div> -->
 
         <div class="set-12 ctrls">
-          <button mat-raised-button color="warn" matStepperNext>
+          <button mat-raised-button color="warn" matStepperNext [disabled]="stepOneFormGroup.invalid">
             <small>Siguiente</small>
           </button>
         </div>
@@ -212,10 +212,10 @@
     <mat-step>
       <form class="set-12 searchhldr">
         <mat-form-field appearance="outline">
-          <mat-label>¿Qué te hace feliz?</mat-label>
+          <mat-label>¿Qué te hace feliz de México?</mat-label>
           <mat-chip-list #happyChipList>
             <mat-chip *ngFor="let item of happyArray" (removed)="removeHappyItem(item)">
-              {{item}}
+              {{item.name}}
               <button matChipRemove>
                 <mat-icon>cancel</mat-icon>
               </button>
@@ -225,7 +225,7 @@
               (matChipInputTokenEnd)="addHappyItem($event)">
           </mat-chip-list>
           <mat-hint>** Presiona <strong>ENTER</strong> después de escribir algo que te haga féliz, ej:
-            <strong>"Comida"</strong>
+            <strong>"Playas"</strong>
           </mat-hint>
         </mat-form-field>
       </form>
@@ -243,10 +243,10 @@
     <mat-step>
       <form class="set-12 searchhldr" [formGroup]="legalsFormGroup">
         <mat-form-field appearance="outline">
-          <mat-label>¿Qué te hace entristezca?</mat-label>
+          <mat-label>¿Qué te entristece de México?</mat-label>
           <mat-chip-list #sadChipList>
             <mat-chip *ngFor="let item of sadArray" (removed)="removeSadItem(item)">
-              {{item}}
+              {{item.name}}
               <button matChipRemove>
                 <mat-icon>cancel</mat-icon>
               </button>
@@ -255,8 +255,8 @@
               [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur"
               (matChipInputTokenEnd)="addSadItem($event)">
           </mat-chip-list>
-          <mat-hint>** Presiona <strong>ENTER</strong> después de escribir algo que te haga féliz, ej:
-            <strong>"Comida"</strong>
+          <mat-hint>** Presiona <strong>ENTER</strong> después de escribir algo que te entriztesca, ej:
+            <strong>"Delincuencia"</strong>
           </mat-hint>
         </mat-form-field>
 
@@ -291,7 +291,7 @@
         <button mat-raised-button color="warn" matStepperPrevious>
           <small>Atras</small>
         </button>
-        <button type="button" mat-raised-button color="primary" [disabled]="legalsFormGroup.invalid">
+        <button type="button" mat-raised-button color="primary" [disabled]="legalsFormGroup.invalid" (click)="onRegister()">
           <small>Registrarme</small>
         </button>
         <mat-spinner diameter="30" *ngIf="submitted"></mat-spinner>
