--- a/src/app/hub/sign-up-mobile/sign-up-mobile.component.scss
+++ b/src/app/hub/sign-up-mobile/sign-up-mobile.component.scss
@@ -35,6 +35,10 @@
     margin: 20px 0 30px 0;
   }
 
+  form {
+    margin-top: 20px;
+  }
+
 
 
 
@@ -248,5 +252,9 @@
         margin-left: 5px !important;
       }
     }
+  }
+
+  .activation-legend {
+    margin-top: 10px;
   }
 }
