--- a/src/app/public-documents/public/public.component.html
+++ b/src/app/public-documents/public/public.component.html
@@ -2,7 +2,8 @@
   <mat-spinner></mat-spinner>
 </div>
 
-<div class="set-12" *ngIf="isDataAvailable">
+<!-- desktop -->
+<div class="set-12" *ngIf="isDataAvailable && !isMobile">
   <div class="set-12 author-hldr">
     <span class="created-by">
       Autor: <span class="author">Mexicolectivo</span>
@@ -72,4 +73,9 @@
       </mat-card>
     </div>
   </div>
+</div>
+
+<!-- mobile -->
+<div class="set-12" *ngIf="isDataAvailable && isMobile">
+  Hello
 </div>
