--- a/src/app/components/app-footer/app-footer.component.scss
+++ b/src/app/components/app-footer/app-footer.component.scss
@@ -16,4 +16,13 @@
     width: 5% !important;
     margin-right: 10px;
   }
+
+  .fixmobile {
+    text-align: center;
+
+    img {
+      width: 20% !important;
+      margin: 0 !important;
+    }
+  }
 }
