--- a/src/app/public-documents/public/public.component.html
+++ b/src/app/public-documents/public/public.component.html
@@ -77,5 +77,5 @@
 
 <!-- mobile -->
 <div class="set-12" *ngIf="isDataAvailable && isMobile">
-  Hello
+  <div class="public-document-mobile-view" [document]="document" [topSolutions]="topSolutions"></div>
 </div>
