--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,4 +6,23 @@
   .mobilenav {
     position: fixed;
   }
+
+  .innernav {
+    .innerbtn {
+      button {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+
+        mat-icon {
+          margin-right: 10px;
+          font-size: 13pt;
+        }
+      }
+    }
+
+    * {
+      margin: 0;
+    }
+  }
 }
