register login review

--- a/src/app/components/public-document-mobile-category-view/public-document-mobile-category-view.component.html
+++ b/src/app/components/public-document-mobile-category-view/public-document-mobile-category-view.component.html
@@ -45,8 +45,7 @@
     </mat-card>
   </div>
 
-  <!-- <div class="set-12 layoutshldr">
-    <div class="public-document-mobile-category-bars" [document]="document" [document_id]="document._id"
-      [layouts]="document.layouts" [open]="open" (openMenu)="getCoverageMenuStatus($event)"></div>
-  </div> -->
+  <div class="set-12 layoutshldr">
+    <div class="public-document-mobile-subcategory-bars"></div>
+  </div>
 </div>
